--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,9 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
+    "remark-gfm": "^4.0.0"
   }
 }
