--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,6 @@
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "remark-gfm": "^4.0.0",
-    "turndown": "^7.2.0",
+    "turndown": "^7.2.0"
   }
 }
