--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,16 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "remark-gfm": "^4.0.0",
